styles.css
* {
  margin: 0;
  box-sizing: border-box;
  font-family: 'Inter', sans-serif;
  font-size: 16px;
}

a {
  text-decoration: none;
}

ul {
  padding-left: 0;
  list-style-type: none;
}

p {
  line-height: 24px;
}

header,
#header_content {
  background: #3c3a39;
}

header {
  height: 65px;
}

#header_content {
  position: fixed;
  display: flex;
  justify-content: space-between;
  color: #fff;
  align-items: center;
  height: 60px;
  width: 100%;
  z-index: 1;
}

#logo {
  margin-left: 25px;
  font-family: "Roboto", sans-serif;
  font-weight: 700;
}

#logo a {
  color: inherit;
  text-decoration: none;
  font-size: 24px;
}

.nav-icon {
  font-size: 23px;
  margin-right: 30px;
}

#nav-links {
  display: none;
}

#main {
  background-color: #1c1a19;
  padding: 130px 25px 150px;
  background-image: url("images/illustration-header-mobile.png");
  background-repeat: no-repeat;
  background-position: bottom  right;
}

h1 {
  font-size: 54px;
  font-family: 'Crete Round', sans-serif;
  color: #ff6b00;
  margin-top: 0;
  width: 330px;
  margin-bottom: 10px;
  line-height: 64px;
}

.work-title h2 {
  font-family: 'Crete Round', sans-serif;
  font-weight: 400;
  font-size: 30px;
  text-align: center;
  margin-bottom: 25px;
}

#main h2 {
  color: #fff5e1;
  font-family: 'Roboto', sans-serif;
  font-weight: 700;
  font-size: 24px;
}

.project p {
  font-weight: 400;
  line-height: 1.5;
}

.pr-1 p {
  color: #091e42;
}

.bg-img p,
h3,
.button {
  color: #fff;
}

#main p {
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #fff;
}

.social-media {
  list-style-type: none;
  display: flex;
  padding-left: 0;
}

.icons {
  color: #dbd8d7;
  font-size: 20px;
  width: 17.99px;
  margin: 0 10px;
}

.mail-icon {
  text-decoration: none;
  font-family: 'Times New Roman', Times, serif;
  font-size: 23px;
}

#work {
  width: 90%;
  margin: auto;
  padding: 80px 0 100px;
}

.work-title {
  display: flex;
  flex-direction: column;
}

hr {
  color: #212121;
  border-bottom: none;
  margin-bottom: 70px;
}

#work-content {
  display: grid;
  grid-template-rows: ifr;
  grid-template-columns: 1fr;
}

.pr-1 img {
  width: 100%;
}

.img-desktop {
  display: none;
}

.footer-body {
  color: #172b4d;
  font-style: normal;
  font-weight: 700;
  font-size: 32px;
  line-height: 44px;
  text-align: center;
}

.bg-img h3 {
  font-family: 'Crete Round', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 32px;
  line-height: 44px;
}

.pr-1 h3 {
  font-family: 'Crete Round', sans-serif;
  font-weight: 400;
  color: #091e42;
  font-size: 32px;
  line-height: 44px;
  margin-bottom: 15px;
}

.project ul {
  display: flex;
  width: 85%;
  justify-content: space-between;
}

ul > li {
  padding: 1rem 0;
}

.project li {
  padding: 10px;
  font-weight: 500;
  line-height: 20px;
  color: #091a42;
  border: 1px solid #8993a4;
}

.bg-img {
  padding-top: 58px;
  background-image: url("images/Img\ Placeholder\ \(1\).png");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  margin: 30px 0;
  padding-bottom: 0;
  transition: all 0.4s linear;
}

.bg-img:hover {
  box-shadow: 8px 10px 10px rgb(122, 117, 117);
}

.bg-img .body-content {
  padding: 0 20px 15px;
  margin-right: 0;
}

.button {
  font-style: normal;
  font-weight: 700;
  font-size: 16px;
  line-height: 24px;
  letter-spacing: 0.03em;
  background: #ff6b00;
  border: none;
  padding: 13px;
  cursor: pointer;
  text-align: center;
}

.btn .button {
  display: inline-block;
}

.button:disabled {
  background: #f4f1f0;
  color: #5b5957;
}

.pr-1 .button {
  margin-top: 15px;
}

.bg-img .button {
  width: 100%;
  margin-top: 15px;
}

.button:enabled {
  background-color: #f55800;
  color: #ffff;
}

.button:hover {
  background: #fff5e1;
  border: 1px solid #f55800;
  color: #f55800;
}

.bg-img ul {
  width: 75%;
}

.bg-img li {
  color: #fff;
  border: none;
  background: rgba(255, 255, 255, 0.24);
}

#about {
  background-color: #1c1a19;
  padding: 130px 0 80px;
}

#about-content {
  margin: auto;
}

#about .body {
  padding-bottom: 65%;
  background-image: url("images/Group.png");
  background-repeat: no-repeat;
  background-position: bottom right;
}

#about h1 {
  width: auto;
  text-align: center;
}

.description {
  color: #f4f5f7;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
}

.about-description {
  padding: 0 25px;
}

.about-btn {
  margin-left: 25px;
  margin-top: 30px;
}

#tools {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#tools .tools-title {
  color: #fff;
  font-style: normal;
  font-weight: 700;
  font-size: 24px;
  margin-bottom: 10px;
}

#tools li {
  text-align: center;
  font-style: normal;
  font-weight: 400;
  font-size: 17px;
  line-height: 43px;
  color: #fff;
}

.list-1 .tools-title::before,
.list-2 .tools-title::before,
.list-3 .tools-title::before {
  font-size: 12px;
  padding-right: 10px;
}

.list-1 .tools-title::before {
  content: "🔶";
  font-size: 18px;
}

.list-2 .tools-title::before {
  content: "🟧";
}

.list-3 .tools-title::before {
  content: "🟠";
}

footer {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  padding: 3rem 1rem 0 1rem;
  flex-direction: column;
  position: relative;
}

article {
  width: 100%;
  margin: 3rem 0 8;
  overflow: hidden;
}

form input,
form textarea {
  width: 100%;
  outline: none;
  border: none;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  padding: 1rem 0.5rem;
}

ul > li > input {
  border-bottom: 1px solid #dbd8d7;
}

form textarea {
  background-color: #fbf8f7;
  height: 114px;
}

form .btn {
  text-align: center;
}

footer .social-media {
  justify-content: center;
  border-top: 1px solid #dfe1e6;
  color: #505f79;
  margin-bottom: 20px;
}

footer .social-media .icons {
  color: #505f79;
}

footer .social-media::after {
  content: " ";
  position: absolute;
  width: 134px;
  height: 5px;
  background: #0d151e;
  border-radius: 10px;
  bottom: 10px;
}

@media (min-width: 768px) {
  .button,
  #nav-links li,
  footer .social-media .icons {
    transition: all 0.3s linear;
  }

  #header_content {
    padding: 0 90px;
  }

  .nav-icon {
    display: none;
  }

  #nav-links {
    display: flex;
    color: #fff;
  }

  #tools li {
    text-align: left;
  }

  #nav-links li:hover {
    transform: translateY(-4px);
  }

  #nav-links li a {
    color: #fff;
    padding: 10px 20px;
  }

  #nav-links li:hover a {
    font-weight: 500;
  }

  #nav-links li:nth-child(4) a {
    font-size: 12px;
    position: relative;
    bottom: 2px;
  }

  #main {
    display: flex;
    flex-direction: row-reverse;
    align-items: center;
    background-image: url("images/Illustration-header\ desktop.png");
    background-size: contain;
  }

  #main-article {
    margin: 0 30px;
    animation-name: slidein;
    animation-duration: 2s;
  }

  @keyframes slidein {
    from {
      margin-left: 100%;
      width: 300%;
    }

    to {
      margin-left: 2%;
      width: 100%;
    }
  }

  h1 {
    font-size: 72px;
    width: 400px;
    font-weight: 400;
    line-height: 82px;
  }

  .work-title h2 {
    text-align: left;
  }

  #main h2 {
    font-family: inherit;
    font-weight: 500;
    line-height: 44px;
    font-size: 32px;
  }

  #main-article .description {
    width: 550px;
    font-family: inherit;
    font-size: 20px;
    line-height: 32px;
    color: #f4f5f7;
  }

  footer .social-media {
    margin-bottom: 0;
  }

  .social-media li:hover .icons {
    color: gray;
    border: 1px solid gray;
    border-radius: 50%;
    padding: 4px 6px;
  }

  footer .social-media li:hover .icons {
    background-color: #f55800;
    color: #fff;
    border: none;
  }

  #main .social-media {
    flex-direction: column;
  }

  #main .social-media li {
    padding: 10px;
    transition: all 0.3s linear;
  }

  #main .social-media li:hover {
    transform: translateX(4px);
  }

  #work,
  #about-content,
  .footer-content {
    width: 87%;
  }

  .work-title {
    display: flex;
    flex-direction: row;
    width: 100%;
    justify-content: space-between;
  }

  .work-title .text {
    width: 240px;
  }

  .img-mobile {
    display: none;
  }

  .img-desktop {
    display: block;
  }

  .horizontal-line {
    width: 1070px;
  }

  hr {
    position: relative;
    top: 20px;
  }

  #work-content {
    display: grid;
    grid-template-columns: auto auto auto;
  }

  .pr-1 {
    grid-column: 1/4;
    display: flex;
    column-gap: 20px;
    height: 450px;
    margin-bottom: 10px;
  }

  .pr-1 .image {
    width: 55%;
  }

  .pr-1 img {
    width: 100%;
    height: 100%;
  }

  .pr-1 .body {
    width: 40%;
  }

  footer h3 {
    text-align: left;
  }

  .pr-1 h3 {
    font-size: 40px;
    line-height: 52px;
  }

  .pr-1 p {
    font-weight: 400;
    font-size: 20px;
    line-height: 28px;
    margin-bottom: 20px;
  }

  .project ul {
    width: 55%;
  }

  .bg-img {
    padding-top: 60px;
    margin: 8px;
    padding-bottom: 0;
    height: 450px;
    transition: all 0.7s linear;
  }

  .bg-img:hover {
    cursor: pointer;
    border: 1px solid #b8c1d4;
    background-image: url("images/Img\ Placeholder\ \(2\).png");
    box-shadow: 6px 8px 4px rgb(122, 117, 117);
  }

  .btn-desktop .body-content {
    position: absolute;
    bottom: 10px;
  }

  .bg-img:hover .body-content {
    display: none;
  }

  .btn-desktop .button {
    display: none;
  }

  .bg-img:hover .button {
    display: block;
    position: absolute;
    bottom: 0;
  }

  .bg-img ul {
    width: 220px;
  }

  .pr-2 {
    position: relative;
    background-image: url("images/Img\ Placeholder\ \(1\).png");
  }

  .pr-3 {
    background-image: url("images/Img\ Placeholder\ \(3\).png");
  }

  .pr-4 {
    background-image: url("images/Img\ Placeholder\ \(4\).png");
  }

  .pr-5 {
    background-image: url("images/Img\ Placeholder\ \(1\).png");
  }

  .pr-6 {
    background-image: url("images/Img\ Placeholder\ \(3\).png");
  }

  .pr-7 {
    background-image: url("images/Img\ Placeholder\ \(4\).png");
  }

  .btn-desktop {
    position: relative;
  }

  .btn-desktop h3,
  .btn-desktop p {
    margin-bottom: 22px;
  }

  #about {
    background-image: url("images/illustration-about\ me@2x.png");
    background-repeat: no-repeat;
    background-position: top 80px right;
    background-size: 500px;
  }

  #about .body {
    padding-bottom: 0;
    background-image: none;
    margin-bottom: 80px;
  }

  #about .about-description,
  #about h1 {
    text-align: left;
  }

  #about .about-description {
    padding-left: 0;
    font-weight: 400;
    font-size: 20px;
    line-height: 32px;
    width: 590px;
    margin-bottom: 30px;
  }

  #about .about-description,
  #about .button {
    margin-left: 0;
  }

  #about-content hr {
    margin-bottom: 100px;
  }

  #tools {
    display: flex;
    flex-direction: row;
    align-items: none;
    justify-content: space-between;
    margin-right: 280px;
  }

  .list-1 {
    position: relative;
    bottom: 75px;
  }

  .footer-content {
    margin: 50px auto 100px;
    display: flex;
    justify-content: space-between;
  }

  .footer-body {
    width: 400px;
    font-weight: 700;
    font-size: 40px;
    line-height: 52px;
    color: #262626;
    text-align: left;
  }

  form {
    width: 65%;
  }

  footer .social-media::after {
    display: none;
  }

  form .btn {
    text-align: left;
  }
}

